--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,11 @@ ul.timeline:before {
     height: 100%;
     z-index: 400;
 }
+
+.bg-danger{
+   background: #d4d9df;
+}
+
 ul.timeline > li {
     margin: 20px 0;
     padding-left: 20px;
