--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,12 @@ body{
     list-style: none;
 }
 
+.bg-blur{
+    background-color: rgba(255, 255, 255, 0.4);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+}
+
 /* NAVBAR */
 .navbar-light .navbar-toggler{
     border: none;
