--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body{
 }
 
 .bg-blur{
-    background-color: red !important;
+    background-color: rgba(255, 255, 255, 0.5) !important;
     -webkit-backdrop-filter: blur(16px);
     backdrop-filter: blur(16px);
 }
