--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,33 @@ body{
     list-style: none;
 }
 
-.bg-blur{
-    background-color: rgba(255, 255, 255, 0.1) !important;
-    -webkit-backdrop-filter: blur(16px);
-    backdrop-filter: blur(16px);
+.skill-group{
+    background-color: rgba(219, 219, 219, 0.174);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+}
+
+.bg-danger{
+    background-color: #002a45 !important;
+}
+
+@keyframes example{
+    from {transform: rotate(0deg);}
+    to {transform: rotate(30deg);}
 }
 
 .emote {
-   transform: rotate(90deg);
+   transform: rotate(0deg);
+   transform-origin: center;
+   display: inline-block;
+   animation-name: example;
+   animation-duration: 0.7s;
+   animation-timing-function: ease-in-out;
+   animation-delay: 0s;
+   animation-iteration-count: infinite;
+   animation-direction: alternate;
 }
+
 
 /* NAVBAR */
 .navbar-light .navbar-toggler{
