--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ body{
 
 .skill-group{
     background-color: rgba(255, 255, 255, 0.7);
-    
+   -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
 
 .bg-danger{
