--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
 
 .emote {
    transform: rotate(0deg);
-   transform-origin: 0 -50%;
+   transform-origin: 100% 100%;
    display: inline-block;
    animation-name: example;
    animation-duration: 0.7s;
